         online and offline scrapers.

WIP      Include databases for all supported platforms in AEL offline scraper.

WIP      Add nplayers metadata field to ROMs.



WIP      Full Extranafart support for Categories/Launchers.

WIP      Full Extranafart for ROMs.


WIP      Support for multidisc systems. Have a look at old AL launcher code.


[B]Advanced Emulator Launcher | version 0.9.5~beta3 | XX January 2017[/B]



[B]Advanced Emulator Launcher | version 0.9.5~beta2 | 27 December 2016[/B]

FIX      Fixed crash when scanning ROMs and the asset scraper is ON.

FIX      Improved ROM scanner debug output. Will make it easier to read scanner logs.

FIX      Fixed crash in "Edit Launcher" -> "Manage ROM List" -> "Rescan ROMs local assets"
         See http://forum.kodi.tv/showthread.php?tid=287826&pid=2479446#pid2479446

FIX      Fixed crash when adding single ROM.
         http://forum.kodi.tv/showthread.php?tid=287826&pid=2484522#pid2484522

FIX      Fixed several uses of old function misc_split_path(). Now FileName() class must be used.


[B]Advanced Emulator Launcher | version 0.9.5~beta1 | 13 December 2016[/B]

FEATURE  New Arcade Database online metadata/asset scraper for MAME ROMs.

FEATURE  Support for several arguments in launcher. This will be useful when using MAME for
         console emulation (MAME consoles from a different region have different names, and an
         European console will typically refuse to run a Japanese game).
         Survey about this: http://forum.kodi.tv/showthread.php?tid=287826&pid=2467547#pid2467547

FEATURE  New command SHOW_ALL_ROMS to render all ROMs in all launchers. Will be used by skins.

FEATURE  Supend/resume Kodi audio engine at launching. This will prevent sound problems in Linux. 
         Include a setting for this in addons "Settings" --> "Advanced".

FEATURE  Export/Import assets/artwork in ROM Collections. Encode binary files in base64 and put